# Knurled

./: .gitignore  AGENTS.md  Cargo.toml  PHASE4_ENGINE_PLAN.md  PHASE5_DSL_UNIFICATION.md  PHASE6B_REMAINING.md  PHASE6_CUSTOM_PROGRAM_AUTHORING.md  README.md  package.json
ci_scripts/: ci_post_clone.sh
cli/: Cargo.toml  README.md
cli/src/: main.rs
docs/: LANGUAGE.md  architecture.md  mvp-spec.md  prd-ios-guided-plan-editing.md  repo-contract.md  ux-gym-floor-audit.md  workbench-plan.md
docs/adr/: 0001-training-log-format.md  0002-plan-lifecycle-events.md  0003-template-authoring-model.md  0004-rpe-autoregulation.md  0005-historical-workout-import.md  0006-commit-generated-build-artifacts.md  0006-warmup-sets-and-equipment-rounding.md  0007-logs-as-record-state-as-truth.md  0008-editing-records-and-one-step-state.md  0009-program-bank-and-shared-history.md  0010-finalized-workouts-and-local-drafts.md  0011-derived-dates-and-schedule-markers.md  0012-engine-owned-user-messages.md
docs/rfc/: 0001-cockpit-jtbd.md  0002-rpe-autoregulation.md  0003-progress-engine.md  0004-structural-edit-preserve-compatible.md
docs/samples/: README.md  logs-2026-06.json  state-current.json
engine/: Cargo.toml  README.md
engine/src/: backtest.rs  calendar.rs  core.rs  dsl.rs  error.rs  import.rs  json.rs  lib.rs  messages.rs  model.rs  parser.rs  plan_edit.rs  programs.rs  record.rs  repo.rs  session.rs  suggest.rs  templates.rs
engine/src/templates/: 531-basic.fitspec  531-beginners.fitspec  gzclp-p-zero.fitspec  gzclp.fitspec  starting-strength-phase1.fitspec  starting-strength-phase2.fitspec  starting-strength-phase3.fitspec
engine/tests/: cockpit.rs  dsl.rs  log_keying_flow.rs  mvp.rs  parser.rs  programs.rs  record_flow.rs  skip_workout.rs  warmup_equipment.rs
examples/531-repo/: README.md  fitspec.toml  plan.fitspec
examples/gzclp-repo/: README.md  plan.fitspec
examples/ss-phase3-repo/: README.md  plan.fitspec
ios/: .gitignore  BACKLOG.md  README.md  project.yml
ios/Config/: Base.xcconfig  Debug.xcconfig  Release.xcconfig  Secrets.sample.xcconfig
ios/Engine/knurled-ios-ffi/: Cargo.toml
ios/Engine/knurled-ios-ffi/include/: knurled_core.h  module.modulemap
ios/Engine/knurled-ios-ffi/src/: lib.rs
ios/Knurled/: Info.plist  Knurled.entitlements
ios/KnurledRestActivity/: Info.plist  KnurledRestActivity.entitlements  KnurledRestActivityBundle.swift  RestLiveActivity.swift
ios/KnurledTests/: AcceptanceTests.swift  ContinueTests.swift  CorrectionTests.swift  EngineRoundTripTests.swift  ExerciseNavigationTests.swift  GitHubTests.swift  ModelDecodingTests.swift  OnboardingTests.swift  ProgramAuthoringTests.swift  SkipExerciseTests.swift  SkipTests.swift  SmokeTests.swift  StrengthDataTests.swift  SubmitTests.swift  SwapTests.swift  WorkoutSettingsTests.swift
ios/ci_scripts/: ci_post_clone.sh
ios/scripts/: build-xcframework.sh
scripts/: build-engine-artifacts.sh
workbench/: README.md  app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
workbench/engine/: index.js
workbench/engine-wasm/: Cargo.toml
workbench/engine-wasm/src/: lib.rs
workbench/scripts/: build-wasm.sh
workbench/src/: App.jsx  charts.js  commit.mjs  github.js  main.js  main.jsx  store.js  styles.css  views.js  workbench.js
workbench/src/lib/: charts.js  (+4 more)
workbench/test/: commit.test.mjs  github.test.mjs
(+108 files in other folders)
