[workspace]
members = ["engine", "cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/jamespotter/Knurled"

[workspace.dependencies]
clap = { version = "4.5.50", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
winnow = "1.0.3"
