[package]
name = "knurled-core"
description = "Deterministic FitSpec engine for Knurled"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "knurled_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
winnow.workspace = true
