[package]
name = "knurled-core"
description = "Deterministic FitSpec engine for Knurled"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "knurled_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
kdl = "6.5.0"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml = "1.1.2"
