# Standalone crate (own [workspace] table) so it is not pulled into the root
# Cargo workspace — `cargo test --workspace` and CLI builds must not try to
# compile this against the wasm target. Mirrors `ios/Engine/knurled-ios-ffi`,
# but exposes the engine to the browser via wasm-bindgen instead of a C ABI.
#
# Build:  bash workbench/scripts/build-wasm.sh
[package]
name = "knurled-engine-wasm"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false

[lib]
name = "knurled_engine"
crate-type = ["cdylib"]

[dependencies]
knurled-core = { path = "../../engine" }
wasm-bindgen = "=0.2.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }

[profile.release]
opt-level = "z"
lto = true

[workspace]
